--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ProjectPmob</string>
+    <string name="font_name">fonts/Poppins Regular 400.ttf</string>
 </resources>
